$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2009-01-02 [C] Color coded some of the docs for better readability {SaWey}
2008-12-31 [M] Updated bundled PHPMailer to 2.03 {Nibbler}
2008-12-31 [B] Update names associated with pictures and comments when user name is changed {Nibbler}
2008-12-31 [O] Removed the OK button from albmgr. Now the changes are saved on client side on blur {Abbas}
2008-12-27 [C] Addapted French lang file to new core changes of internationalization {Frantz}
2008-12-25 [C] Removed potentially confusing plus icon in ban manager; adjusted text input sizes for consistent look {TranzNDance}
2008-12-25 [C] Reorganized admin menu to place related buttons next to each other {TranzNDance}
2008-12-24 [B] Fixed the json_encode function to properly escape the strings {Abbas}
2008-12-23 [B] Fixed issue involving display of name field in the report to admin form {TranzNDance}
2008-12-23 [O] Modified code to record hit in a single ajax call instead of two in slideshow {Abbas}
2008-12-22 [O] Developed AJAX slideshow in new looks and new functionality {Sameera}
2008-12-20 [M] Removed the redundant slideshow.inc.php and its references {Abbas}
2008-12-19 [O] Moved pic_editor.php js to external file {SaWey}
2008-12-19 [C] In all style.css, commented out blinking important.gif, replaced with red bold {Paver}
2008-12-19 [O] Moved contact.php js to external file {SaWey}
2008-12-19 [B] Fixed [url] bbcodes not properly rendering {SaWey}
2008-12-19 [A] Added opening of rel="external" links in new window (core & documentation) {SaWey}