@@ -25,6 +25,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2009-01-02 [B] Fixed keyword_select.php not using keyword_separator setting {Paver}
 2009-01-02 [C] Color coded some of the docs for better readability {SaWey}
 2008-12-31 [M] Updated bundled PHPMailer to 2.03 {Nibbler}
 2008-12-31 [B] Update names associated with pictures and comments when user name is changed {Nibbler}
